Functional of chart page added. Minor changes throughout project

--- a/edit/templates/edit/edit.html
+++ b/edit/templates/edit/edit.html
@@ -26,5 +26,8 @@
     </details>
     {% endfor %}
     <a href="{% url 'addsource' %}">Добавить источник</a> <br>
+    <a href="{% url 'main' %}">Цитаты </a>
+    <a href="{% url 'chart' %}">Топ </a>
+    <a href="{% url 'edit_start' %}">Редактировать</a>
 </body>
 </html>
