--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -124,4 +124,9 @@
         updateUI();
     });
     </script>
+
+    <a href="{% url 'main' %}">Цитаты </a>
+    <a href="{% url 'chart' %}">Топ </a>
+    <a href="{% url 'edit_start' %}">Редактировать</a>
+</body>
 </html>
